--- a/app/src/main/res/layout/activity_user_signin.xml
+++ b/app/src/main/res/layout/activity_user_signin.xml
@@ -6,47 +6,48 @@
 
     <View
         android:id="@+id/signin_title_underscore_view"
-        android:layout_width="75dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="5dp"
+        android:layout_height="70dp"
         android:background="@color/tripbook_main_1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/signin_title_01_tv"/>
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toTopOf="@id/signin_email_background_iv"
+        app:layout_constraintStart_toStartOf="@id/signin_email_background_iv"/>
 
     <TextView
         android:id="@+id/signin_title_01_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="@string/app_slogan"
         android:textColor="@color/tripbook_main_1"
         android:textSize="15sp"
         android:fontFamily="@font/notosans_kr_light"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/signin_title_02_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:includeFontPadding="false"
+        app:layout_constraintTop_toTopOf="@id/signin_title_underscore_view"
+        app:layout_constraintBottom_toTopOf="@id/signin_title_02_tv"
+        app:layout_constraintStart_toStartOf="@id/signin_title_underscore_view"/>
 
     <TextView
         android:id="@+id/signin_title_02_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="@string/app_name_uppercase"
         android:textColor="@color/tripbook_main_1"
         android:textSize="40sp"
         android:fontFamily="@font/notosans_kr_bold"
+        android:includeFontPadding="false"
         app:layout_constraintTop_toBottomOf="@id/signin_title_01_tv"
-        app:layout_constraintBottom_toTopOf="@id/signin_email_background_iv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="@id/signin_title_underscore_view"
+        app:layout_constraintStart_toStartOf="@id/signin_title_underscore_view"/>
 
     <ImageView
         android:id="@+id/signin_email_background_iv"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:background="@drawable/signin_edittext_background"
-        app:layout_constraintTop_toBottomOf="@id/signin_title_02_tv"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -61,15 +62,17 @@
         app:layout_constraintTop_toTopOf="@id/signin_email_background_iv"
         app:layout_constraintBottom_toBottomOf="@id/signin_email_background_iv"
         app:layout_constraintStart_toStartOf="@id/signin_email_background_iv"
-        app:layout_constraintEnd_toEndOf="@id/signin_email_background_iv"/>
+        app:layout_constraintEnd_toEndOf="@id/signin_email_background_iv"
+        />
 
     <ImageView
         android:id="@+id/signin_password_background_iv"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:background="@drawable/signin_edittext_background"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/signin_email_background_iv"
+        app:layout_constraintBottom_toTopOf="@id/signin_signin_btn_iv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -90,9 +93,10 @@
         android:id="@+id/signin_signin_btn_iv"
         android:layout_width="320dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/signin_signin_btn_background"
-        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@id/signin_password_background_iv"
+        app:layout_constraintBottom_toTopOf="@id/signin_signup_btn_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     
@@ -117,7 +121,8 @@
         android:text="@string/user_signup"
         android:textSize="16sp"
         android:fontFamily="@font/notosans_kr_bold"
-        app:layout_constraintTop_toBottomOf="@id/signin_signin_btn_tv"
+        app:layout_constraintTop_toBottomOf="@id/signin_signin_btn_iv"
+        app:layout_constraintBottom_toTopOf="@id/signin_find_password_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -125,12 +130,11 @@
         android:id="@+id/signin_find_password_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="100dp"
         android:text="@string/user_find_password"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:fontFamily="@font/notosans_kr_regular"
-        app:layout_constraintTop_toBottomOf="@id/signin_signin_btn_tv"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/signin_signup_btn_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
