--- a/app/src/main/res/layout/item_user_my_past_trip.xml
+++ b/app/src/main/res/layout/item_user_my_past_trip.xml
@@ -3,14 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginHorizontal="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
         android:id="@+id/mypasttrip_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/img_home_book"
-        android:layout_marginStart="15dp"
+        android:adjustViewBounds="true"
+        android:minWidth="160dp"
+        android:maxHeight="280dp"
+        android:background="@drawable/bg_signin_rectangle_radius_20_transparent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="ContentDescription" />
@@ -19,8 +23,8 @@
         android:id="@+id/mypasttrip_date_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_8"
-        android:fontFamily="@font/notosans_kr_medium"
+        android:textSize="@dimen/text_9"
+        android:fontFamily="@font/notosans_kr_regular"
         android:includeFontPadding="false"
         android:layout_marginTop="2dp"
         app:layout_constraintTop_toBottomOf="@id/mypasttrip_iv"
@@ -31,8 +35,9 @@
         android:id="@+id/mypasttrip_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/text_8"
-        android:fontFamily="@font/notosans_kr_medium"
+        android:textSize="@dimen/text_11"
+        android:textColor="@color/black"
+        android:fontFamily="@font/notosans_kr_bold"
         android:includeFontPadding="false"
         app:layout_constraintTop_toBottomOf="@id/mypasttrip_date_tv"
         app:layout_constraintEnd_toEndOf="@id/mypasttrip_iv"
